# mcp-hub

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test-web.toml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-config-process-supervisor/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  02-PLAN.md  03-PLAN.md  04-PLAN.md
.planning/phases/02-health-monitoring-logging/: 01-PLAN.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PLAN.md  02-RESEARCH.md  02-VERIFICATION.md  03-PLAN.md
.planning/phases/03-mcp-introspection-daemon-mode/: 01-PLAN.md  02-PLAN.md  03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PLAN.md  03-RESEARCH.md  03-VERIFICATION.md  04-PLAN.md
.planning/phases/04-web-ui/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-config-generation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-REVIEW-FIX.md  05-REVIEW.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-setup-wizard/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-REVIEW.md  06-VERIFICATION.md
.planning/phases/07-distribution/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-REVIEW-FIX.md  07-REVIEW.md  07-REVIEWS.md  07-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: verify-published.sh
src/: cli.rs  config.rs  control.rs  daemon.rs  gen_config.rs  init.rs  lib.rs  logs.rs  main.rs  output.rs  supervisor.rs  types.rs
src/mcp/: dispatcher.rs  health.rs  introspect.rs  mod.rs  protocol.rs
src/web/: assets.rs  mod.rs  routes.rs  sse.rs
static/: style.css
templates/: base.html  logs.html  status.html  status_partial.html  tools.html  tools_detail.html
tests/: cli_daemon.rs  cli_integration_test.rs  config_reload.rs  config_test.rs  daemon.rs  dispatcher.rs  gen_config_test.rs  health_monitor.rs  health_types.rs  init_wizard.rs  integration_phase2.rs  introspection.rs  log_buffer.rs  logs_command.rs  protocol.rs  status_table.rs  supervisor_test.rs
tests/fixtures/: echo-server.sh  env-override.toml  invalid-bad-transport.toml  invalid-missing-command.toml  mock-mcp-server.sh  ping-responder.sh  test.env  unknown-fields.toml  valid.toml
