[package]
name = "mcp-server-hub"
version = "0.1.0"
edition = "2021"
description = "PM2 for MCP servers — manage, monitor, and configure your MCP servers"
license = "MIT"
repository = "https://github.com/UnityInFlow/mcp-hub"
keywords = ["mcp", "process-manager", "ai", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# cargo-binstall contract (the load-bearing crate≠bin fix — HUB-04).
# The crate is `mcp-server-hub` but the binary is `mcp-hub`, so:
#   - pkg-url's `{ name }` resolves to the CRATE name (mcp-server-hub) → matches the
#     GitHub Release asset names emitted by .github/workflows/release.yml
#     (mcp-server-hub-<target>-v<version>.tgz), so binstall finds the asset.
#   - bin-dir's `{ bin }` resolves to the BINARY name (mcp-hub) inside a FLAT archive
#     (no wrapping directory — release.yml packages just the binary).
#   - pkg-fmt = "tgz" makes `{ archive-suffix }` expand to `.tgz` (matches the Linux
#     asset extension pinned in 03-TOOLING-PINS.md §3). A mismatch here would 404 and
#     silently fall back to a source compile (Pitfall 1) — these MUST stay byte-for-byte
#     aligned with release.yml + 03-TOOLING-PINS.md.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# Windows ships a .zip (reduced non-unix CLI) — override pkg-fmt for that target only.
[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

# docs.rs build config (HUB-03). The crate has no build.rs and no build-time network
# need; default-target pins the full unix feature set on docs.rs's Linux build host so
# the daemon/web-UI deps (gated under cfg(unix)) compile and document.
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
all-features = false

[[bin]]
name = "mcp-hub"
path = "src/main.rs"

[lib]
name = "mcp_hub"
path = "src/lib.rs"

include = [
    "src/**/*",
    "tests/**/*",
    "templates/**/*",
    "static/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "5"
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }
rand = "0.9"
axum = "0.8"
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
tower-http = { version = "0.6", features = ["timeout", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"
portpicker = "0.1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
